monitoring/ingress-prometheus.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ben-ingress
  namespace: monitoring
  annotations:
   #kubernetes.io/ingress.class: nginx
   cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.adeyeletechhub.com.ng
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: prometheus
              port:
                number: 9090
      
  tls:
      - hosts:
          - prometheus.adeyeletechhub.com.ng
        secretName: tls-secret
